--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,10 +138,16 @@ android {
 }
 
 dependencies {
+   // implementation project(':react-native-admob')
+    implementation project(':react-native-firebase')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+   // implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+    implementation 'com.android.support:appcompat-v7:+'
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-ads:17.2.1'
+
 }
 
 // Run this once to be able to run the application with BUCK
@@ -150,3 +156,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
