--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,8 +138,9 @@ android {
 }
 
 dependencies {
-   // implementation project(':react-native-admob')
+    implementation project(':react-native-vector-icons')
     implementation project(':react-native-firebase')
+   // implementation project(':react-native-admob')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
    // implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
