--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,9 +25,12 @@
         <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
 
 
-        <meta-data
+     <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713"/>
+
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+        <!-- Add this line to avoid crashes on Android 9 until AdMob SDK update -->
 
     </application>
 
