--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^6.2.4",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
-    "react-native-admob": "^2.0.0-beta.5",
     "react-native-firebase": "^5.5.4",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-image-slider": "^2.0.3",
     "react-native-phone-call": "^1.0.9",
+    "react-native-star-rating": "^1.1.0",
     "react-navigation": "^3.11.0"
   },
   "devDependencies": {
