--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -107,6 +107,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -138,6 +139,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-sqlite-2')
+    implementation project(':react-native-pushe')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-firebase')
    // implementation project(':react-native-admob')
@@ -148,6 +151,7 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-ads:17.2.1'
+    implementation 'com.android.support:multidex:1.0.3'
 
 }
 
