--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <!-- Add this line to avoid crashes on Android 9 until AdMob SDK update -->
 
+        <meta-data android:name="co.ronash.pushe.token" android:value="PUSHE_308921679544"/>
+
+
     </application>
 
 </manifest>
