--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-slider": "^2.0.3",
     "react-native-phone-call": "^1.0.9",
+    "react-native-pushe": "^1.6.3",
+    "react-native-sqlite-2": "^2.0.2",
     "react-native-star-rating": "^1.1.0",
     "react-navigation": "^3.11.0"
   },
