--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
   },
   "dependencies": {
     "firebase": "^6.2.4",
+    "lottie-react-native": "^3.0.1",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-firebase": "^5.5.4",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-slider": "^2.0.3",
+    "react-native-maps": "^0.25.0",
     "react-native-phone-call": "^1.0.9",
     "react-native-pushe": "^1.6.3",
     "react-native-sqlite-2": "^2.0.2",
     "react-native-star-rating": "^1.1.0",
+    "react-native-video": "^4.4.3",
     "react-navigation": "^3.11.0"
   },
   "devDependencies": {
@@ -30,5 +33,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts"
+    ]
   }
 }
